deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: golearn
  labels:
    pod-security.kubernetes.io/enforce: restricted
